kanc/src/tests/sample_code/should_fail/single_file/bind/ref_variant_in_variant_return_type.ph
type U {
    .U: U,
}

type Bar(T: Type, x: T) {
    .B: Bar(Bar(U, U.U), Bar.B),
}
